add traits filter to nfts
